--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(EasySPI)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_library(EasySPI library.cpp library.h)
+add_library(EasySPI EasySPI.cpp EasySPI.h)
 
 # change the directory location to your arduino install location for fetching Arduino.h
-include_directories(~/Documents/arduino-1.8.10/hardware/arduino/avr/cores/arduino/)
+set(SOURCE_DIR ~/Documents/arduino-1.8.10/)
+include_directories(${SOURCE_DIR}/hardware/arduino/avr/cores/arduino/)
+include_directories(${SOURCE_DIR}/hardware/arduino/avr/libraries/)
+include_directories(${SOURCE_DIR}/hardware/tools/avr/avr/include/)
